Implemented both remove